--- a/milestones/milestone2/web_page/style.css
+++ b/milestones/milestone2/web_page/style.css
@@ -4,7 +4,7 @@
   --red: #d62828;
   --orange: #f77f00;
   --yellow: #fcbf49;
-  --cream: #eae2b7;
+  --cream: #f7ecdc;
   --text-light: #fff;
   --text-dark: #1a1a1a;
   --spacing: 1rem;
@@ -77,7 +77,7 @@ a:focus {
   align-items: center;
   background-color: #003049; /* navy */
   padding: 1rem 2rem;
-  color: #eae2b7;
+  color: var(--cream);
   position: sticky;
   top: 0;
   z-index: 1000;
@@ -86,7 +86,7 @@ a:focus {
 .navbar__logo {
   font-size: 1.4rem;
   font-weight: bold;
-  color: #fcbf49;
+  color: var(--orange);
 }
 
 .navbar__links {
@@ -99,7 +99,7 @@ a:focus {
 
 .navbar__links li a {
   text-decoration: none;
-  color: #eae2b7;
+  color: var(--cream);
   font-weight: 500;
   transition: color 0.3s ease;
 }
@@ -113,7 +113,13 @@ a:focus {
   min-height: 100vh;
   z-index: 0;
 }
-
+.flex-display {
+  justify-content: center;
+  display: flex;
+  flex-wrap: nowrap;
+  flex-direction: column;
+  align-items: center;
+}
 .background-wrapper::before {
   content: "";
   position: fixed;
@@ -143,19 +149,20 @@ a:focus {
 .card__desc {
   color: var(--text-light);
   margin: 0;
+  max-width: 60%;
+  text-align: center;
 }
 
 .graph-container {
   width: 100%;
-  max-width: 800px;
 }
 
 .graph-box {
-  width: 100%;
+  width: 60%;
   height: 450px;
   border: 2px solid #eae2b7;
   overflow: hidden;
-  margin: 1rem 0;
+  margin: 1rem auto;
 }
 
 .graph-box img {
@@ -187,14 +194,12 @@ a:focus {
   background: rgba(0, 0, 0, 0.3); /* transparent black overlay */
   display: flex;
   align-items: center;
-  /* justify-content: center; */
+  justify-content: center;
   padding: 2rem;
-  /* text-align: center; */
 }
 
 .site-header__content {
   z-index: 1;
-  max-width: 800px;
 }
 
 .site-header__title {
@@ -220,4 +225,29 @@ a:focus {
 
 .footer__text {
   margin: 0;
+}
+
+/* map js world tour*/
+.world_tour_container {
+  display: flex;
+  gap: 1rem;
+  align-items: center;
+}
+
+#map {
+  width: 100%;
+  height: 800px;
+}
+
+.data__section {
+  display: flex;
+  justify-content: center;
+}
+
+.info-panel {
+  padding: 2rem;
+  background: var(--cream);
+  border-radius: 5px;
+  display: none;
+  height: fit-content;
 }
