--- a/milestones/milestone2/web_page/style.css
+++ b/milestones/milestone2/web_page/style.css
@@ -31,7 +31,7 @@ body {
   padding: var(--spacing);
   color: var(--text-light);
   /* text-align: center; */
-  background-color: rgba(0, 0, 0, 0.2); /* black transparent overlay */
+  background-color: rgba(0, 0, 0, 0.2);
 }
 
 .navbar__title {
@@ -54,9 +54,9 @@ h4 {
 }
 
 p {
-  font-size: 1rem; /* 24px */
-  line-height: 1.5rem; /* 30px */
-  letter-spacing: 0.03em; /* 2% of the current font size */
+  font-size: 1rem;
+  line-height: 1.5rem;
+  letter-spacing: 0.03em;
 }
 
 a {
@@ -75,7 +75,7 @@ a:focus {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #003049; /* navy */
+  background-color: #003049;
   padding: 1rem 2rem;
   color: var(--cream);
   position: sticky;
@@ -124,7 +124,7 @@ a:focus {
   content: "";
   position: fixed;
   inset: 0;
-  background-color: rgba(0, 0, 0, 0.2); /* black transparent overlay */
+  background-color: rgba(0, 0, 0, 0.2);
   z-index: -1;
 }
 /* Main */
@@ -136,13 +136,13 @@ a:focus {
 }
 
 .card__title {
-  color: var(--red);
+  color: var(--orange);
   margin-bottom: 0;
 }
 
 .section-caption {
   font-size: 0.8rem;
-  color: var(--red);
+  color: var(--orange);
   margin: 0 0 1rem 0;
   font-weight: bold;
 }
@@ -168,7 +168,14 @@ a:focus {
 .graph-box img {
   width: 100%;
   height: 100%;
-  object-fit: cover; /* or contain */
+  object-fit: cover;
+  display: block;
+}
+
+.small-img {
+  max-width: 70%;
+  height: auto;
+  margin: 1rem auto;
   display: block;
 }
 
@@ -178,7 +185,6 @@ a:focus {
   position: relative;
   height: 50vh;
   background-color: var(--navy);
-  background-image: url("./assets/bg-header.avif"); /* optional: add a background image of a game board/map */
   background-size: cover;
   background-position: center;
   display: flex;
@@ -191,7 +197,7 @@ a:focus {
 .site-header__overlay {
   position: absolute;
   inset: 0;
-  background: rgba(0, 0, 0, 0.3); /* transparent black overlay */
+  background: rgba(0, 0, 0, 0.3);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -200,6 +206,7 @@ a:focus {
 
 .site-header__content {
   z-index: 1;
+  text-align: center;
 }
 
 .site-header__title {
@@ -220,7 +227,7 @@ a:focus {
   color: var(--text-light);
   text-align: center;
   padding: var(--spacing);
-  background-color: rgba(0, 0, 0, 0.2); /* black transparent overlay */
+  background-color: rgba(0, 0, 0, 0.2);
 }
 
 .footer__text {
