--- a/milestones/milestone3/web_page/style.css
+++ b/milestones/milestone3/web_page/style.css
@@ -240,30 +240,37 @@ a:focus {
   display: flex;
   gap: 1rem;
   align-items: center;
-  /* width: 928px; */
 }
 
 #map {
   width: 100%;
-  height: 800px;
-  width: 80%;
   height: 500px;
   margin: auto;
-  border: 1px solid #ccc;
 }
 
 .data__section {
   display: flex;
   justify-content: center;
-  margin: 16px 0;
+  margin: 16px auto;
   width: 70rem;
 }
 
-.info-panel {
-  padding: 2rem;
-  background: var(--cream);
-  border-radius: 5px;
-  display: none;
-  height: fit-content;
-  width: 200px;
+/* /////////////// */
+.marker {
+  width: 8px;
+  height: 8px;
+  background-color: #3d687f;
+  border-radius: 50%;
+  box-shadow: 0 0 5px #3d687f;
+}
+
+/* map box popup content */
+.mapboxgl-popup-content {
+  background-color: rgba(0, 48, 73, 0.65) !important;
+  color: #fff;
+  font-family: "Inter", sans-serif;
+  padding: 12px;
+  border-radius: 10px;
+  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.4);
+  backdrop-filter: blur(6px);
 }
