--- a/docs/style.css
+++ b/docs/style.css
@@ -20,8 +20,8 @@
 }
 
 @font-face {
-  font-family: 'NHL Phoenix Regular';
-  src: url('fonts/NHLPhoenix.ttf') format('ttf');
+  font-family: "NHL Phoenix Regular";
+  src: url("fonts/NHLPhoenix.ttf") format("ttf");
   font-weight: normal;
   font-style: normal;
 }
@@ -127,7 +127,7 @@ a:focus {
   content: "";
   position: fixed;
   inset: 0;
-/*  background-color: rgba(0, 0, 0, 0.2); */
+  /*  background-color: rgba(0, 0, 0, 0.2); */
   z-index: -1;
 }
 
@@ -135,7 +135,7 @@ a:focus {
   gap: var(--spacing);
   padding: var(--spacing);
   padding: 4rem 1.5rem;
-  max-width: 1000px; 
+  max-width: 1000px;
   margin: 0 auto;
 }
 
@@ -229,7 +229,7 @@ a:focus {
 }*/
 
 .site-header__title {
-  font-family: 'NHL Phoenix', serif;
+  font-family: "NHL Phoenix", serif;
   font-size: 9rem;
   color: var(--orange);
   text-align: center;
@@ -239,9 +239,7 @@ a:focus {
   color: #fca82f;
   letter-spacing: 0.05em;*/
   color: #fca82f;
-  text-shadow:
-    0 1px 2px rgba(0, 0, 0, 0.4),
-    0 0 10px rgba(252, 168, 47, 0.4);
+  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.4), 0 0 10px rgba(252, 168, 47, 0.4);
   letter-spacing: 0.05em;
 }
 
@@ -257,7 +255,7 @@ a:focus {
 
 .site-header__title .line {
   display: block;
-  font-family: 'NHL Phoenix', serif;
+  font-family: "NHL Phoenix", serif;
 }
 
 .line-1 {
@@ -267,7 +265,7 @@ a:focus {
 }
 
 .line-2 {
-  font-size:80px;
+  font-size: 80px;
   color: var(--orange);
 }
 
@@ -311,7 +309,6 @@ a:focus {
   max-width: 1000px;
   padding-left: 1.5rem;
   padding-right: 1.5rem;
-
 }
 
 .info-panel {
@@ -361,14 +358,15 @@ a:focus {
   transform: rotateY(180deg);
 }
 
-.card-front, .card-back {
+.card-front,
+.card-back {
   position: absolute;
   width: 100%;
   height: 100%;
   border-radius: 12px;
   backface-visibility: hidden;
   box-shadow: 0 10px 18px rgba(0, 0, 0, 0.3);
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -419,7 +417,7 @@ a:focus {
 }
 
 .card-title {
-  font-family: 'Caudex', serif;
+  font-family: "Caudex", serif;
   font-size: 1.1rem;
   font-weight: 600;
   margin: 0.5rem 0 0.75rem;
@@ -427,7 +425,7 @@ a:focus {
 }
 
 .card-back .card-details p {
-  font-family: 'Caudex', serif;
+  font-family: "Caudex", serif;
   font-size: 0.9rem;
   line-height: 1.2;
   margin: 0.2rem 0;
@@ -473,7 +471,7 @@ svg text {
 
 .x-axis text,
 .y-axis text {
-  font-size: 1rem; 
+  font-size: 1rem;
   fill: var(--text-light);
   font-weight: 300;
 }
@@ -522,7 +520,8 @@ svg text {
   display: block;
 }
 
-body, html {
+body,
+html {
   overflow-x: hidden;
 }
 
@@ -584,7 +583,8 @@ body, html {
   padding-bottom: 0;
 }
 
-body, html {
+body,
+html {
   overflow-x: hidden;
 }
 
@@ -671,15 +671,6 @@ label[for="propertySelector"] {
   max-width: 1000px;
   margin: 0 auto;
   gap: 0.5rem;
-
-}
-
-.marker {
-  width: 8px;
-  height: 8px;
-  background-color: #3d687f;
-  border-radius: 50%;
-  box-shadow: 0 0 5px #3d687f;
 }
 
 .mapboxgl-popup-content {
@@ -690,8 +681,14 @@ label[for="propertySelector"] {
   border-radius: 10px;
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.4);
   backdrop-filter: blur(6px);
+  font-size: small;
+  max-width: 200px;
 }
 
+.mapboxgl-popup-content h3,
+.mapboxgl-popup-content p {
+  font-size: inherit;
+}
 #world_heat_map {
   width: 100%;
   display: flex;
@@ -748,7 +745,9 @@ label[for="propertySelector"] {
   text-align: justify;
 }
 
-select, #yearSelector, #propertySelector {
+select,
+#yearSelector,
+#propertySelector {
   background-color: var(--navy);
   color: var(--text-light);
   border: 2px solid var(--orange);
@@ -765,7 +764,9 @@ select, #yearSelector, #propertySelector {
   text-align: left;
 }
 
-select::after, #yearSelector::after, #propertySelector::after {
+select::after,
+#yearSelector::after,
+#propertySelector::after {
   content: "";
   position: absolute;
   pointer-events: none;
@@ -785,28 +786,38 @@ select {
   text-align: left;
 }
 
-select:hover, #yearSelector:hover, #propertySelector:hover {
+select:hover,
+#yearSelector:hover,
+#propertySelector:hover {
   border-color: var(--yellow);
   box-shadow: 0 0 8px var(--yellow);
 }
 
-select:focus, #yearSelector:focus, #propertySelector:focus {
+select:focus,
+#yearSelector:focus,
+#propertySelector:focus {
   outline: none;
   border-color: var(--yellow);
   box-shadow: 0 0 12px var(--yellow);
 }
 
 @keyframes float {
-  0% { transform: translateY(0px); }
-  50% { transform: translateY(-10px); }
-  100% { transform: translateY(0px); }
+  0% {
+    transform: translateY(0px);
+  }
+  50% {
+    transform: translateY(-10px);
+  }
+  100% {
+    transform: translateY(0px);
+  }
 }
 
 .play-button {
   margin-top: 2rem;
   padding: 1.2rem 3rem;
   font-size: 1.4rem;
-  font-family: 'NHL Phoenix', serif;
+  font-family: "NHL Phoenix", serif;
   color: #fca82f;
   background-color: transparent;
   border: 2px solid #fca82f;
@@ -820,13 +831,18 @@ select:focus, #yearSelector:focus, #propertySelector:focus {
 }
 
 .play-button::before {
-  content: '';
+  content: "";
   position: absolute;
   top: 0;
   left: -100%;
   width: 100%;
   height: 100%;
-  background: linear-gradient(90deg, transparent, rgba(252, 168, 47, 0.4), transparent);
+  background: linear-gradient(
+    90deg,
+    transparent,
+    rgba(252, 168, 47, 0.4),
+    transparent
+  );
   transition: left 0.6s ease;
   z-index: 1;
 }
@@ -872,21 +888,92 @@ select:focus, #yearSelector:focus, #propertySelector:focus {
 }
 
 @keyframes floatAnim {
-  0%   {transform: translateY(0px) rotate(var(--tilt));}
-  50%  {transform: translateY(-10px) rotate(var(--tilt));}
-  100% {transform: translateY(0px) rotate(var(--tilt));}
+  0% {
+    transform: translateY(0px) rotate(var(--tilt));
+  }
+  50% {
+    transform: translateY(-10px) rotate(var(--tilt));
+  }
+  100% {
+    transform: translateY(0px) rotate(var(--tilt));
+  }
 }
 
-.pos1 {top: 10%; left: 5%; --tilt: -20deg; width: 120px;}
-.pos2 {top: 40%; left: 17%; --tilt: 10deg; width: 120px;}
-.pos3 {top: 12%; right: 17%; --tilt: 12deg; width: 110px;}
-.pos4 {bottom: 37%; right: 8%; --tilt: -10deg; width: 170px;}
-.pos5 {bottom: 10%; left: 10%; --tilt: -20deg; width: 190px;}
-.pos6 {bottom: 10%; right: 20%; --tilt: -10deg; width: 130px;}
-.pos7 {top: 15%; left: 20%; --tilt: -10deg; width: 60px;}
-.pos8 {bottom: 20%; left: 32%; --tilt: 5deg; width: 65px;}
-.pos9 {bottom: 17%; right: 10%; --tilt: 10deg; width: 70px;}
-.pos10 {bottom: 50%; right: 23%; --tilt: -5deg; width: 50px;}
-.pos11 {top: 20%; right: 7%; --tilt: -10deg; width: 60px;}
-.pos12 {bottom: 40%; left: 7%; --tilt: -2deg; width: 50px;}
-.pos13 {bottom: 13%; right: 32%; --tilt: -5deg; width: 55px;}
+.pos1 {
+  top: 10%;
+  left: 5%;
+  --tilt: -20deg;
+  width: 120px;
+}
+.pos2 {
+  top: 40%;
+  left: 17%;
+  --tilt: 10deg;
+  width: 120px;
+}
+.pos3 {
+  top: 12%;
+  right: 17%;
+  --tilt: 12deg;
+  width: 110px;
+}
+.pos4 {
+  bottom: 37%;
+  right: 8%;
+  --tilt: -10deg;
+  width: 170px;
+}
+.pos5 {
+  bottom: 10%;
+  left: 10%;
+  --tilt: -20deg;
+  width: 190px;
+}
+.pos6 {
+  bottom: 10%;
+  right: 20%;
+  --tilt: -10deg;
+  width: 130px;
+}
+.pos7 {
+  top: 15%;
+  left: 20%;
+  --tilt: -10deg;
+  width: 60px;
+}
+.pos8 {
+  bottom: 20%;
+  left: 32%;
+  --tilt: 5deg;
+  width: 65px;
+}
+.pos9 {
+  bottom: 17%;
+  right: 10%;
+  --tilt: 10deg;
+  width: 70px;
+}
+.pos10 {
+  bottom: 50%;
+  right: 23%;
+  --tilt: -5deg;
+  width: 50px;
+}
+.pos11 {
+  top: 20%;
+  right: 7%;
+  --tilt: -10deg;
+  width: 60px;
+}
+.pos12 {
+  bottom: 40%;
+  left: 7%;
+  --tilt: -2deg;
+  width: 50px;
+}
+.pos13 {
+  bottom: 13%;
+  right: 32%;
+  --tilt: -5deg;
+  width: 55px;
+}
